--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-	<a href="https://moclaw-profile.herokuapp.com/profile" target="_blank">Nhấn vào đây để xem</a>
 </body>
+<script>
+	window.location.href = "https://moclaw-profile.herokuapp.com/profile";
+</script>
 
 </html>
