--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Moclaw</title>
-	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link rel="icon" type="image/x-icon" href="./favicon.ico">
 	<meta name="description" content="đây là profile của Mộc Lâm tò mò thì click vào đây">
 </head>
 <style>
@@ -21,12 +21,7 @@
 	<div class="text">Tò mò về người ta thì ib đi chứ stalk tưởng ngta làm gì</div>
 </body>
 <script>
-	const url = 'https://moclaw-profile.herokuapp.com/profile';
-	fetch(url)
-		.then((res) => res.json())
-		.then((data) => {
-			console.log(data);
-		});
+	window.location.href = "https://moclaw-profile.herokuapp.com/profile";
 </script>
 
 </html>
