--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,11 @@
 </style>
 
 <body>
-	<div class="text">Tò mò về người ta thì ib đi chứ stalk tưởng ngta làm gì</div>
+	<div class="text">
+		<h1>Đây là profile của Mộc Lâm</h1>
+		<h2>Click vào đây để xem profile</h2>
+		<a>click here</a>
+	</div>
 </body>
 <script>
 	window.location.href = "https://moclaw-profile.herokuapp.com/profile";
